# epic-games-free-games-notifier

./: .dockerignore  .env.docker  .env.example  .gcloudignore  .gitignore  DEPLOY.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  GCP_DEPLOYMENT.md  Makefile  QUICKSTART.md  README-DEPLOY.md  README.md  cloudbuild.yaml  config.yaml  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.py  server.py  setup.py  setup.sh
src/: __init__.py  api_client.py  config.py  discord_notifier.py  exceptions.py  main.py  models.py
tests/: __init__.py  test_api_client.py  test_discord_notifier.py
